Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ stages:
    jobs :
    - job :  MyJob
      strategy :
+         maxParallel : 1
          matrix:
               JOB1:
                   Version: 1.0
