--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,11 +30,6 @@ jobs:
   pool:
    name: default
   steps:
-   
-- job: ActivityonWindows
-  pool:
-   name: Default
-  steps:
    - task: PowerShell@2
      inputs:
        targetType: 'inline'
@@ -42,3 +37,13 @@ jobs:
          # Write your PowerShell commands here.
          
          Write-Host "Hello World"
+- job: ActivityonWindows
+  pool:
+   name: Default
+  steps:
+   - task: CmdLine@2
+     inputs:
+       script: |
+         echo Write your commands here
+         
+         echo Hello world
