--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ jobs:
   - script: echo Hello, world!
     displayName: 'Run a one-line script'
 - job: ActivityonWindows
+  dependsOn: [ActivityonLinux]
   steps:
    - task: PowerShell@2
      inputs:
