Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,11 @@
 
 #pool:
 #  vmImage: ubuntu-latest
+pool:
+  name: MyPool
+  demands:
+  - myCustomCapability   # exists check for myCustomCapability
+  - Agent.Version -equals 2.144.0 # equals check for Agent.Version 2.144.0
 
 #stages:
 # - stage : Mystage
