Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@
 #pool:
 #  vmImage: ubuntu-latest
 pool:
-  name: MyPool
+  name: default
   demands:
   - myCustomCapability   # exists check for myCustomCapability
   - Agent.Version -equals 2.144.0 # equals check for Agent.Version 2.144.0
