Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,27 +28,35 @@ pool:
 name: sampleWeb_$(Date:yyyyMMdd)$(Rev:.r)
 trigger:
 - main
-resources:
-  webhooks:
-  - webhook: MVAUK
-    connection: Incoming Webhook
-    type: Incoming Webhook
+#resources:
+#  webhooks:
+#  - webhook: MVAUK
+#    connection: Incoming Webhook
+#    type: Incoming Webhook
 variables: 
 - name: webhookURL
   value: 
   
 jobs:
 - job: ActivityonWindows
-  steps:
+  steps:      
    - task: PowerShell@2
      condition: succeeded() 
      inputs:
        targetType: 'inline'  
        script: |
-        $myTeamsWebHook = “https://woshub.webhook.office.com/webhookb2/123456-12312-@aaaaa-bbbb-cccc/IncomingWebhook/xxxxxxxxxxxxxxxxxxxxx/xxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxxxxxxxxxxx/xxxxx-xxxx-xxxx-xxxx”
-        Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"Test Teams!"}' -Uri $myTeamsWebHook  
-   - script: 
-     condition: succeeded()    
+        
+        - uses: actions/checkout@v2
+        - name: Notify dedicated teams channel
+        - uses: jdcargile/ms-teams-notification@v1.3
+          with:
+            github-token: ${{ github.token }} # this will use the runner's token.
+            ms-teams-webhook-uri: https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f
+            notification-summary: Your custom notification message 
+            notification-color: 17a2b8
+            timezone: America/Denver
+  
+
  #       success{
  #          office365ConnectorSend (
  #           status: "Pipeline Status",
