--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,26 +35,37 @@ trigger:
 #    type: Incoming Webhook
 variables: 
 - name: webhookURL
-  value: 
+  value: Abdeen
   
 jobs:
 - job: ActivityonWindows
-  steps:      
-   - task: PowerShell@2
-     condition: succeeded() 
-     inputs:
-       targetType: 'inline'  
-       script: |
-        Write-Host "Hello World"
-        - uses: actions/checkout@v2
-        - name: Notify dedicated teams channel
-        - uses: jdcargile/ms-teams-notification@v1.3
+  steps:
+    success:
+      name: One with everything
+    #  runs-on: ubuntu-18.04
+      steps:
+        - uses: actions/checkout@master
+        - name: Microsoft Teams Notification
+          uses: skitionek/notify-microsoft-teams@master
+          if: always()
           with:
-            github-token: ${{ github.token }} # this will use the runner's token.
-            ms-teams-webhook-uri: https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f
-            notification-summary: Your custom notification message 
-            notification-color: 17a2b8
-           # timezone: America/Denver
+            webhook_url: https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f
+            needs: ${{ toJson(needs) }}
+            job: ${{ toJson(job) }}
+            steps: ${{ toJson(steps) }}
+            dry_run: True
+
+    if_failure:
+      name: Only if failure
+      runs-on: ubuntu-18.04
+      steps:
+        - uses: actions/checkout@master
+        - name: Microsoft Teams Notification
+          uses: skitionek/notify-microsoft-teams@master
+          if: failure()
+          with:
+            webhook_url: https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f
+
   
 
  #       success{
