--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,9 +62,9 @@ stages:
     jobs:
     - job: MyJob2
       steps:
-      - ${{ each value in stageDependencies.A1.${{parameters.environment}}.result}}:
+      - ${{ each value in stageDependencies.A1.parameters.environment.result}}:
       - script: echo ${{ value }}
-      - ${{ if eq(stageDependencies.A1.${{parameters.environment}}.result, 'Successded') }}:
+      - ${{ if eq(stageDependencies.A1.value.result, 'Successded') }}:
         - script: echo 'success'
       - ${{ else }}: 
         - script: echo "failed"   
