--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ trigger:
 #- name: webhookURL
 #  value: Abdeen
 parameters:
-  - name : envrionment
+  - name : envrionments
     type: object
     default:
       - MyJob1
@@ -62,7 +62,7 @@ stages:
     jobs:
     - job: MyJob2
       steps:
-      - ${{ each value in parameters.environment}}:
+      - ${{ each value in parameters.environments }}:
       - script: echo ${{ value }}
       - ${{ if eq(stageDependencies.A1.value.result, 'Successded') }}:
         - script: echo 'success'
