--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,10 +70,15 @@ stages:
       steps:        
         - ${{ each value in variables.value }}:
            - script: echo ${{ value }}
+           - task: CmdLine@2
+             inputs:
+               script: |
+                 echo ${{ value }}
            - ${{ if eq(value , 'Successded') }}:
              - script: echo Abdeen succeeded
            - ${{ else }}: 
-             - script: echo Abdeen failed   
+             - script: echo Abdeen failed 
+
 
  #       success{
  #          office365ConnectorSend (
