Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,7 @@ stages:
        #        Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"Test Teams!"}' -Uri $myTeamsWebHook
         - ${{ each value in parameters.listOfStrings }}:
            - script: echo ${{ value }}
-           - ${{ if eq( ${{ value }} , 'Succeeded') }}:
+           - ${{ if eq( variables['${{ value }}'] , 'Succeeded') }}:
              - task: PowerShell@2
                inputs:
                  targetType: 'inline'
