--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,8 @@ stages:
        #        Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"Test Teams!"}' -Uri $myTeamsWebHook
         - ${{ each value in parameters.listOfStrings }}:
            - script: echo ${{ value }}
-           - ${{ if eq( variables['${{ value }}'] , 'Succeeded') }}:
+           # variables['${{ value }}']
+           - ${{ if eq( variables[stageDependencies.A1.MyJob1.result , 'Succeeded') }}:
              - task: PowerShell@2
                inputs:
                  targetType: 'inline'
