--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ stages:
         - ${{ each value in parameters.listOfStrings }}:
            - script: echo ${{ value }}
            # variables['${{ value }}']
-           - ${{ if eq( variables[stageDependencies.A1.MyJob1.result , 'Succeeded') }}:
+           - ${{ if eq( stageDependencies.A1.MyJob1.result, 'Succeeded') }}:
              - task: PowerShell@2
                inputs:
                  targetType: 'inline'
