--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,8 @@ stages:
     dependsOn: A1
     jobs:
     - job: MyJob3
-      #condition: in(stageDependencies.A1.MyJob1.result, 'Succeeded') 
+      - ${{ each value in parameters.listOfStrings }}:
+        condition: in(${{ value }}, 'Succeeded') 
       steps:
        # - task: PowerShell@2
        #   inputs:
@@ -78,18 +79,18 @@ stages:
        #        $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
        #       
        #        Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"Test Teams!"}' -Uri $myTeamsWebHook
-        - ${{ each value in parameters.listOfStrings }}:
-           - script: echo ${{ value }}
-           # variables['${{ value }}']
-           - ${{ if eq(dependencies.A1.MyJob1.result , 'Succeeded') }}:
+   #     - ${{ each value in parameters.listOfStrings }}:
+   #        - script: echo ${{ value }}
+   #        # variables['${{ value }}']
+   #        - ${{ if eq(dependencies.A1.MyJob1.result , 'Succeeded') }}:
              - task: PowerShell@2
                inputs:
                  targetType: 'inline'
                  script: |
                    $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
                    Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"Test Teams!"}' -Uri $myTeamsWebHook
-           - ${{ else }}: 
-             - script: echo Abdeen failed 
+    #       - ${{ else }}: 
+    #         - script: echo Abdeen failed 
 
 
  #       success{
