--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,8 +69,7 @@ stages:
     dependsOn: A1
     jobs:
     - job: MyJob3
-      - ${{ each value in parameters.listOfStrings }}:
-      condition: in(${{ value }}, 'Succeeded') 
+      condition: eq(stageDependencies.A1.MyJob1.result, 'Succeeded') 
       steps:
        # - task: PowerShell@2
        #   inputs:
