--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,10 +66,10 @@ stages:
         value : stageDependencies.A1.MyJob1.result
       - name: MyJob2
         value : stageDependencies.A1.MyJob2.result        
-    dependsOn: A1
     jobs:
     - job: MyJob3
-      condition: eq(stageDependencies.A1.MyJob1.result, 'Succeeded') 
+      dependsOn: A1
+      condition: eq(stageDependencies.A1.MyJob1.result, 'Failed') 
       steps:
        # - task: PowerShell@2
        #   inputs:
