--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
              JOB2:
                  Version: 2.0
                  AppName: bar   
-    condition: or(succeeded('JOB1'))              
+    condition: succeeded('JOB1')              
     steps:
      - script:
          echo "($Version)"
