--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,11 @@ stages:
              JOB2:
                  Version: 2.0
                  AppName: bar   
-    condition: succeeded('MyJob.JOB1')              
+                 
+    condition: succeeded()              
     steps:
      - script:
+         echo ${{ job.status }}
          echo "($Version)"
          echo "($AppName)"
        displayName : "Echo Variables"
