Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
                  
     condition: succeeded()              
     steps:
-     - script:
+     - script: |
          echo "($Status)"
          echo "($Version)"
          echo "($AppName)"
