Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,8 @@ stages:
     condition: succeeded()              
     steps:
      - script: |
-         echo "($Version)"
-         echo "($AppName)"
+         echo "$(Version)"
+         echo "$(AppName)"
        displayName : "Echo Variables"
 
 #name: sampleWeb_$(Date:yyyyMMdd)$(Rev:.r)
