--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,9 @@
 pool:
   name: Abdeen
 
+variables:
+- name: status
+  value: success
 stages:
 - stage : Mystage
   jobs :
@@ -22,13 +25,19 @@ stages:
              JOB2:
                  Version: 2.0
                  AppName: bar   
-                 
-    condition: succeeded()              
+                               
     steps:
      - script: |
          echo "$(Version)"
          echo "$(AppName)"
+         echo job success
        displayName : "Echo Variables"
+       condition: succeeded()
+     - script: |
+         echo job failed
+       condition: failed()
+
+      
 
 #name: sampleWeb_$(Date:yyyyMMdd)$(Rev:.r)
 #trigger:
