--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
         #      $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
         #      Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(version) Test Teams is up"}' -Uri $myTeamsWebHook 
        condition: succeeded()
-     - ${{ if eq($(Version), 'int1') }}:
+     - ${{ if eq('Version', 'int1') }}:
         - script: |
               Write-Host "##vso[task.setvariable variable=int1Status;]Int1 Test Teams is up"
      - ${{ elseif eq(variables['Version'], 'qcx') }}:
