--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
        condition: succeeded()
      - ${{ if eq('Version', 'int1') }}:
         - script: |
-              echo "##vso[task.setvariable variable=int1Status;]Int1 Test Teams is up"
+              $int1Status = "Int1 Test Teams is up"
               echo "$(int1Status)"
      - ${{ elseif eq(variables['Version'], 'qcx') }}:
         - script: |
