--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,17 +30,16 @@ stages:
      - task: PowerShell@2
        inputs:
          targetType: 'inline'
-        #  script: |
-        #      $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
-        #      Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(version) Test Teams is up"}' -Uri $myTeamsWebHook 
-       condition: succeeded()
+         script: |
+             $int1Status = "Int1 environment is up"
+             echo "$(int1Status)"
+            # $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
+            # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(version) Test Teams is down"}' -Uri $myTeamsWebHook 
+       condition: or(failed(), Canceled())
     # - ${{ if eq('Version', 'int1') }}:
-     - script: |
-              $int1Status = "Int1 Test Teams is up"
-              echo "$(int1Status)"
-     - ${{ if eq(variables['Version'], 'qcx') }}:
-        - script: |
-              Write-Host "##vso[task.setvariable variable=qcxStatus;]qcx Test Teams is up"              
+   #  - ${{ if eq(variables['Version'], 'qcx') }}:
+    #    - script: |
+     #         Write-Host "##vso[task.setvariable variable=qcxStatus;]qcx Test Teams is up"              
 
 
 
