--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
                  AppName: bar   
                                
     steps:
-    - ${{ if eq(Version, 'int1') }}:     
+    - ${{ if eq( $(Version) , 'int1') }}:     
       - task: PowerShell@2
         inputs:
          targetType: 'inline'
