--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,17 @@ stages:
                  AppName: foo
              JOB2:
                  Version: qcx
-                 AppName: bar   
+                 AppName: bar  
 
-    steps:
+    variables:
+      Environment: $(Version)             
+
+    steps:  
       - task: PowerShell@2
         inputs: 
          targetType: 'inline'   
          script: |
+            echo   $(Environment)
             echo  "$(Version)"
             $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
            # Invoke-RestMethod -Method post -ContentType 'Application/Json' -Body '{"text":"$(version) Test Teams is up"}' -Uri $myTeamsWebHook 
