Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
 
     variables:
       - name: Environment
-        value: "$(Version)"            
+        value: $(Version)            
 
     steps:  
       - task: PowerShell@2
