--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,15 +29,14 @@ stages:
                  AppName: bar  
 
     variables:
-      - name: Environment
-        value: $(Version)            
+      Environment : $(Version)          
 
     steps:  
       - task: PowerShell@2
         inputs: 
          targetType: 'inline'
-         ${{ if eq( variables.Environment, 'int1' ) }}:   
-          script: |
+        # ${{ if eq( variables.Environment, 'int1' ) }}:   
+         script: |
             echo   $(Environment)
             echo  "$(Version)"
             $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
