--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,12 +31,17 @@ stages:
     variables:
       Environment : $(Version)          
 
-    steps:  
+    steps: 
+      - ${{ if eq( variables.Environment, 'int1' ) }}:  
+         - bash: 
+            echo "##vso[task.setvariable variable=myJobVar]this is the same job"
+
       - task: PowerShell@2
         inputs: 
          targetType: 'inline'
         # ${{ if eq( variables.Environment, 'int1' ) }}:   
          script: |
+            echo   $(myJobVar)
             echo   $(Environment)
             echo  "$(Version)"
             $myTeamsWebHook = “https://vodafone.webhook.office.com/webhookb2/57d56a25-1bd8-43de-a333-251ee152be67@68283f3b-8487-4c86-adb3-a5228f18b893/IncomingWebhook/40060548445f42488a707b744a5c5c3d/ae86f284-3d1d-442b-8cd6-28c89bd0544f”
