--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ stages:
 
     steps: 
       - ${{ if eq( variables.Environment, 'int1' ) }}:  
-         - bash: 
-            echo "##vso[task.setvariable variable=myJobVar]this is the same job"
+         - powershell: 
+             Write-Host "##vso[task.setvariable variable=myJobVar]this is the same job"
 
       - task: PowerShell@2
         inputs: 
